Adding meta description

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="This is a description"  />
+    <meta name="rsdescription" content="This is a description"  />
     <title>Republic testing</title>
   </head>
   <body>
