Changed html page title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="rsdescription" content="mattresses,brush,chair,furniture,desk,lamp,stove,refrigerator"  />
-    <title>Republic testing</title>
+    <title>Republic Services</title>
   </head>
   <body>
     <h1>Holiday Schedule and Local Information</h1>
