Changed quotation marks

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="rsdescription" content="mattresses,brush,chair,furniture,desk,lamp,stove,refrigerator"  />
-    <meta name=“rsholiday” content="You,Holiday,Pickup,Schedule,For,more,details,regarding,your,specific,service,schedule,log,into,your,account" />
-    <meta name=“rsfacility” content="Facility,type,Landfill,Get,Directions,Locations" />
-    <meta name=“rslocal” content="mattresses,brush,chair,furniture,desk,lamp,stove,refrigerator" />
+    <meta name="rsholiday" content="You,Holiday,Pickup,Schedule,For,more,details,regarding,your,specific,service,schedule,log,into,your,account" />
+    <meta name="rsfacility" content="Facility,type,Landfill,Get,Directions,Locations" />
+    <meta name="rslocal" content="mattresses,brush,chair,furniture,desk,lamp,stove,refrigerator" />
     <title>Republic Services</title>
   </head>
   <body>
